--- a/test/springbootGateway-test.yml
+++ b/test/springbootGateway-test.yml
@@ -15,6 +15,7 @@ zuul:
     springboot-auth:
       path: /auth/**
   add-proxy-headers: true
+  ignored-services: "*"
   sensitive-headers:      #清空zuul过滤的请求头信息
 #安全配置
 security:
