--- a/test/springbootDemo-test.yml
+++ b/test/springbootDemo-test.yml
@@ -3,6 +3,8 @@ spring:
       elasticsearch:
         cluster-nodes:
           192.168.32.140:9300
+        cluster-name:
+          elasticsearch
         repositories:
           enabled:
              true
