--- a/test/springbootDemo-test.yml
+++ b/test/springbootDemo-test.yml
@@ -3,7 +3,7 @@ spring:
       elasticsearch:
         client:
           transport:
-            sniff: false
+            sniffsss: false
         cluster-nodes:
           192.168.32.140:9300
         cluster-name:
