--- a/test/springbootDemo-test.yml
+++ b/test/springbootDemo-test.yml
@@ -1,16 +1,8 @@
 spring:
    data:
       elasticsearch:
-        client:
-          transport:
-            sniffsss: false
-        cluster-nodes:
-          192.168.32.140:9300
-        cluster-name:
-          elasticsearch
-        repositories:
-          enabled:
-             true
+        cluster-nodes: 192.168.32.140:9300
+        cluster-name: elasticsearch
    datasource:
       driver-class-name: com.mysql.jdbc.Driver
       url: jdbc:mysql://192.168.32.140:3306/springbootdemo?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
