--- a/test/springbootDemo-test.yml
+++ b/test/springbootDemo-test.yml
@@ -1,6 +1,7 @@
 spring:
    data:
       elasticsearch:
+        cluster-name: elasticsearch
         cluster-nodes: 192.168.32.140:9300
         # 是否本地连接
         local: true
