--- a/test/springbootDemo-test.yml
+++ b/test/springbootDemo-test.yml
@@ -4,7 +4,7 @@ spring:
         cluster-name: elasticsearch
         cluster-nodes: 192.168.32.140:9300
         # 是否本地连接
-        local: true
+        #local: true
         repositories:
         # 仓库中数据存储
          enabled: true
